only showing updates on archive page / squishing content to correct size // #156

--- a/web/layout/old/v1.less
+++ b/web/layout/old/v1.less
@@ -40,6 +40,14 @@ body
     overflow: auto;
 }
 
+#menuContent, #bodyContent
+{
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 #body.guestbook
 {
     background-color: #666;
